# SegCT

./: .gitignore  Makefile  README.md  pyproject.toml
src/: get_roi.py  main.py  test.py  test_segmentation.py
src/computations/: average_gray_value.py  build-structure-tensor.py  build_structure_tensor.py  compute.py  compute_eigne_vectors.py  feature_vector.py  helpers.py
src/datasets/training_sets/cropped data set/: sub_image_100.tif  sub_image_1000.tif  sub_image_1001.tif  sub_image_1002.tif  sub_image_1003.tif  sub_image_1004.tif  sub_image_1005.tif  sub_image_1006.tif  sub_image_1007.tif  sub_image_1008.tif  sub_image_1009.tif  sub_image_101.tif  sub_image_1010.tif  sub_image_1011.tif  sub_image_1012.tif  sub_image_1013.tif  sub_image_1014.tif  sub_image_1015.tif  sub_image_1016.tif  sub_image_1017.tif  sub_image_1018.tif  sub_image_1019.tif  sub_image_102.tif  sub_image_1020.tif  (+988 more)
src/helpers/: data_dumpers.py  filters.py  image_chunker.py  parallel_process_big_images.py
src/models/: image_filters.py  outils.py  visualization.py
src/visulization/: imshow_3D.py  read_image_stack.py
test/test_images/SlicesY_8bit/: 00000.tif  00001.tif  00002.tif  00003.tif  00004.tif  00005.tif  00006.tif  00007.tif  00008.tif  00009.tif  00010.tif  00011.tif  00012.tif  00013.tif  00014.tif  00015.tif  00016.tif  00017.tif  00018.tif  00019.tif  00020.tif  00021.tif  00022.tif  00023.tif  00024.tif  00025.tif  00026.tif  00027.tif  00028.tif  00029.tif  00030.tif  00031.tif  00032.tif  00033.tif  00034.tif  00035.tif  00036.tif  00037.tif  00038.tif  00039.tif  (+1104 more)
